@@ -1,0 +1,9 @@
+TARGET = downsamplefilter
+
+HEADERS += downsamplefilter.h \
+           downsamplefilterplugin.h
+
+SOURCES += downsamplefilter.cpp \
+           downsamplefilterplugin.cpp
+
+include( ../filter-config.pri )
